Visualización de los bookings

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,22 @@
 page-home {
 
 }
+
+.header .col {
+    background-color:lightgrey;
+    font-weight: bold;
+}
+
+.body .col {
+    border: solid 1px grey;
+    border-bottom-style: none;
+    border-right-style: none;
+}
+
+.body .col:last-child {
+    border-right: solid 1px grey;
+}
+
+.body .row:last-child .col {
+    border-bottom: solid 1px grey;
+}
